# modbus

./: Cargo.toml
src/: lib.rs  result.rs
src/protocol/: mod.rs  request.rs
src/protocol/response/: fixedlenvec.rs  mod.rs  varlenvec.rs
